--- a/styles.css
+++ b/styles.css
@@ -234,6 +234,9 @@ h1 {
 #about .left h2 {
     color: var(--clr-primary-300);
 }
+#about .left h3 {
+    font-size: 1.5rem;
+}
 #about .aboutMeContent{
     display: flex; 
     width: 100%;
@@ -526,6 +529,14 @@ footer .icons .icon a:hover {
     }
     .projectCard {
         width: 90%;
+        height: auto;
+    }
+    .project2 {
+        flex-direction: column;
+    }
+    .project2container {
+        align-items: center;
+        width: 100%;
     }
     #contact {
         height: 25vh;
@@ -622,12 +633,13 @@ footer .icons .icon a:hover {
     #projects {
         align-items: center;
         height: auto;
+        padding: 75px 0;
     }
     #projects .projectContainer {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-       
+        
     }
     .projectCard {
         width: 90%;
@@ -635,7 +647,17 @@ footer .icons .icon a:hover {
         margin: 10px;
         padding: 10px;
     }
-
+    .projectCard h2 {
+        text-align: center;
+    }
+    .project1 {
+        padding: 30px;
+    }
+    .projectCard a {
+        width: fit-content;
+        text-align: center;
+        font-size: .875rem;
+    }
     #contact .right img {
         display: none;
     }
