--- a/styles.css
+++ b/styles.css
@@ -164,6 +164,7 @@ section {
     justify-content: center;
     height: 100vh;
     width: 100%; 
+
     padding: 0 15vw 0 15vw;
 }
 
@@ -190,11 +191,19 @@ h1 {
 #home .hero {
     display: flex;
     width: 75%;
+    max-width: 800px;
 }
 
 #home .hero .container1, #home .hero .container2 {
     width: 50%;
    
+}
+
+#home .hero .container1 .headshot {
+    width: 100%;
+    max-width: 350px;
+    filter: drop-shadow(-10px 10px 0px #ececec);
+    border-radius: 5px;
 }
 #home .hero .container2 {
     display: flex;
@@ -205,11 +214,7 @@ h1 {
     padding-bottom: 100px;
 }
 
-.headshot {
-    width: 100%;
-    filter: drop-shadow(-10px 10px 0px #ececec);
-    border-radius: 5px;
-}
+
 
 /* =========================================================*/
 /*                          ABOUT                           */
@@ -217,13 +222,16 @@ h1 {
 #about {
     flex-direction: column;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
     position: relative;
     background-color: #ececec;
     padding-top:175px;
     height: auto;
-}
 
+}
+#about .aboutContainer {
+    max-width: 800px;
+}
 #about h1 {
     color: var(--clr-primary-400);
 }
@@ -241,6 +249,7 @@ h1 {
 #about .aboutMeContent{
     display: flex; 
     width: 100%;
+    
     margin-top: 30px;
     line-height: 24px;
     
@@ -386,14 +395,14 @@ button:hover {
 /*                          CONTACT                         */
 /* =========================================================*/
 #contact {
-    background-color: var(--clr-primary-300);
+    background-color: var(--clr-primary-200);
     justify-content: center;
     align-items: center;
     height: 65vh;
 }
 
 #contact h1 {
-    color: white;
+    color: var(--clr-primary-400);
 }
 
 #contact a {
@@ -484,6 +493,13 @@ footer .icons .icon a:hover {
 /* =========================================================*/
 /*                        MEDIA QUERIES                     */
 /* =========================================================*/
+
+/* Wide Screen */
+@media screen and (min-width:1400px) {
+    .wide {
+        max-width: 900px;
+    }
+}
 
 /* Tablet */
 @media screen and (max-width:820px) {
