--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,14 @@
 /* =========================================================*/
 
 @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Gluten:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
+@font-face {
+    src: url(SouthamDemo.otf);
+    font-family: 'Southam Demo';
+    src: url(Unique.ttf);
+    font-family: 'Unique';
+    src: url(Belleza-Regular.ttf);
+    font-family: 'Belleza';
+}
 :root {
     --clr-primary-200: #ebebeb;
     --clr-primary-300: #bdbdbd;
@@ -11,7 +18,8 @@
     --clr-primary-900: #2b2b2b;
 
     --ff-primary: 'Cutive Mono', monospace;
-    --ff-headings: 'Gluten', cursive;
+    --ff-headings: 'Belleza';
+    /* --ff-headings: 'Gluten', cursive; */
 }
 /* =========================================================*/
 /*                     MAIN PAGE SETUP                      */
@@ -174,6 +182,18 @@ section {
     padding: 0 15vw 0 15vw;
 }
 
+section h1 {
+    font-family: var(--ff-headings);
+    font-size: 3rem;
+}
+section h2 {
+    font-family: var(--ff-headings);
+    font-size: 2rem;
+    padding: 10px 0;
+    color: var(--clr-primary-300);
+   
+}
+
 /* =========================================================*/
 /*                           HOME                           */
 /* =========================================================*/
@@ -186,12 +206,13 @@ p {
 }
 
 p.subheading {
+    margin-top: 1.5rem;
     font-size: 1.5rem;
 }
 
-h1 {
-    font-family: var(--ff-headings);
-    font-size: 2.75rem;
+#home h1 {
+    font-family: 'Southam Demo';
+    font-size: 10rem;
     color: var(--clr-primary-400);
 }
 
@@ -199,11 +220,9 @@ h1 {
     display: flex;
     width: 75%;
     max-width: 1200px;
-}
-
-#home .hero .container1, 
-#home .hero .container2 {
-    width: 50%; 
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content:end;
 }
 
 /* #home .hero .container1 .headshot {
@@ -213,14 +232,6 @@ h1 {
     filter: contrast(85%);
     border-radius: 5px;
 } */
-#home .hero .container2 {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content:end;
-    padding-left: 20px;
-    padding-bottom: 100px;
-}
 
 
 
@@ -243,14 +254,8 @@ h1 {
 #about h1 {
     color: var(--clr-primary-400);
 }
-#about h2 {
-    font-family: var(--ff-headings);
-    color: var(--clr-primary-300);
-    padding: 10px 0 10px 0;
-}
-#about .left h2 {
-    color: var(--clr-primary-300);
-}
+
+
 #about .left h3 {
     font-size: 1.5rem;
 }
@@ -395,8 +400,13 @@ button:hover {
 }
 .project2 img {
     width: 100%;
-    filter: contrast(60%);
+    filter: contrast(60%) grayscale(100%);
     border-radius: 5px;
+    transition: filter 0.5s;
+}
+
+.project2 img:hover {
+    filter: contrast(60%) grayscale(0%);
 }
 
 /* =========================================================*/
