--- a/styles.css
+++ b/styles.css
@@ -329,6 +329,7 @@ button:hover {
 
 #projects h1 {
     padding-bottom: 60px;
+    text-align: left;
 }
 
 .projectContainer {
@@ -338,7 +339,7 @@ button:hover {
     align-items: center;
     max-width: 1200px;
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 .projectCard { 
@@ -346,15 +347,14 @@ button:hover {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: left;
-    width: 80%; 
-    height: 300px;
+   
+    height: auto;
 
     color: var(--clr-primary-400);
-    background-color: rgb(248, 247, 247);
+    background-color: var(--clr-primary-200);
 
     padding: 45px;
-    margin: 10px;
+    margin: 1rem 3rem;
     border-radius: 5px;
 }
 
@@ -398,6 +398,7 @@ button:hover {
     width: 50%;
     padding: 20px;
 }
+
 .project2 img {
     width: 100%;
     filter: contrast(60%) grayscale(100%);
@@ -414,12 +415,15 @@ button:hover {
 /* =========================================================*/
 #contact {
     background-color: var(--clr-primary-200);
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 60vh;
+    height: 65vh;
 }
 #contact .wide {
     flex-direction: row;
+    width: 100%;
+    height: 80%;
 }
 #contact h1 {
     color: var(--clr-primary-400);
@@ -450,25 +454,64 @@ button:hover {
 #contact .left, 
 #contact .right {
     display: flex;
-    justify-content: center;
-    margin-right: 1rem;
-}
-
-#contact .left {
-    width: 70%;
     flex-direction: column;
+    justify-content: center;
+
 }
-#contact .right {
-    width: 35%;
+#contact .left {
+    width: 40%;
     height: auto;
-    filter: drop-shadow(-3px -3px 0px var(--clr-primary-300));
-    
+    filter: drop-shadow(-3px -3px 0px var(--clr-primary-300));  
+    margin-right: 1rem;
+    align-items: center;
 }
-#contact .right .headshot {
-    width: 100%;
+#contact .left .headshot {
+    width: 90%;
     object-fit: contain;
     border-radius: 5px;
+    filter: grayscale(100%);
+    transition: filter 0.2s;
 }
+#contact .left .headshot:hover {
+    filter: grayscale(0%);
+}
+#contact .right {
+    width: 60%;
+}
+
+#contact form {
+    display: flex; 
+    position: relative;
+    justify-content: flex-start;
+    flex-direction: column;
+    margin: .75rem 0;
+}
+
+#contact form p,
+#contact form input,
+#contact form textarea {
+    font-family: var(--ff-body);
+    font-size: 1.125rem;
+    width: 100%;
+    height: 2rem;
+    border-style: none;
+}
+#contact form textarea {
+    height: 5rem;
+    resize: none;
+}
+#contact form input,
+#contact form textarea {
+    padding: 10px; 
+    margin: 1rem 0;
+}
+#contact form button {
+    width: fit-content;
+    margin: 1rem 0 0 0;
+}
+
+
+
 /* =========================================================*/
 /*                            FOOTER                        */
 /* =========================================================*/
@@ -517,14 +560,19 @@ footer .icons .icon a:hover {
 /* =========================================================*/
 
 /* Wide Screen */
-@media screen and (min-width:1400px) {
+@media screen and (min-width: 1400px) {
     .wide {
         max-width: 1200px;
     } 
+    #contact .wide .left img {
+        width: 80%;
+    }
+    
 }
 
 /* Tablet */
 @media screen and (max-width:820px) {
+    
     nav {
         background-color: white;
     }
@@ -534,20 +582,9 @@ footer .icons .icon a:hover {
     #home {
         padding: 0 5vw 0 5vw;
     }
-    #home .hero {
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: center;
+    #home h1 {
+        font-size: 8rem;
     }
-    #home .hero .container1{
-        width: 65%;
-    }
-    #home .hero .container2 {
-        width: 100%;
-        margin-top: 2rem;
-    }
-
-    
     #about {
         height: auto;
         padding-top: 100px;
@@ -584,12 +621,27 @@ footer .icons .icon a:hover {
         align-items: center;
         width: 100%;
     }
+    
+    
     #contact {
         height: auto;
-        padding: 3rem;
+        padding: 5rem;
     }
     #contact h1 {
         font-size: 2rem;
+        margin-bottom: 1rem;
+    }
+   
+    #contact .wide .left {
+        width: 40%;
+    }
+    #contact .wide .right {
+        width: 60%;
+    }
+
+    #contact form input,
+    #contact form textarea {
+        margin: .625rem 0;
     }
 }
 /* iPhone */
@@ -601,56 +653,10 @@ footer .icons .icon a:hover {
     nav ul {
         display: none;
     }
-    #home {
-        padding: 0 3vw;
-    }
-    #home .hero .container1 {
-        width: 80%;
-    }
-    #home .hero .container2 h1 {
-        font-size: 2rem;
-    }
-    #home .hero .container2 p {
-        font-size: 1.5rem;
-    }
-    #home .hero .container2 p.subheading {
-        font-size: 1.25rem;
-    }
-
     
-    /* HAMBURGER MENU STYLING 
-    
-    .menu-btn {
-        display: flex;
+    #home h1 {
+        font-size: 4.5rem;
     }
-    nav {
-        align-items: center;
-        justify-content: space-between;    
-    }
-    nav .container {
-        width: auto;
-    }
-    nav .menu-btn {
-        margin: 0 12vw;
-    }
-   
-    nav ul {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        position: absolute;
-        top: 0;
-        right: 0;
-        left: 0;
-        height: 100vh;
-        background-color: rgb(126, 195, 148);
-        transform: translateX(100vw);
-        transition: transform 0.3s ease-in-out;
-        align-items: center;
-    }
-    nav ul.open {
-        transform: translateX(0);
-    } */
 
     #about {
         height: auto;
@@ -708,23 +714,29 @@ footer .icons .icon a:hover {
     }
     #contact {
         flex-direction: column;
-        align-items: flex-start;
+        justify-content: center;
+        align-items: center;
         padding: 3rem;
     }
     #contact h1 {
         font-size: 1.5rem;
     }
-    #contact .left {
-        width: 100%;
-        order: 2;
-    }
-    #contact .right { 
-        width: 75%;
-        padding: 0 0 2rem 0;
-    }
     #contact .wide{
         flex-direction: column;
     }
+    #contact .wide .left {
+        width: 100%;
+        align-items: center;
+    }
+    #contact .wide .left  img {
+        width: 80%;
+    }
+    
+    #contact .wide .right { 
+        width: 100%;
+        margin: 2rem 0 0 0;
+    }
+    
 }
 
 
