--- a/styles.css
+++ b/styles.css
@@ -10,13 +10,14 @@
     src: url('SouthamDemo.woff2') format('woff2'), /* Super Modern Browsers */
          url('SouthamDemo.woff') format('woff'), /* Pretty Modern Browsers */
          url('SouthamDemo.ttf')  format('truetype'); /* Safari, Android, iOS */
-      
-
-
     font-family: 'Southam Demo';
-    src: url(Unique.ttf);
+}
+@font-face {
+    src: url(Unique.ttf) format('truetype');
     font-family: 'Unique';
-    src: url(Belleza-Regular.ttf);
+}
+@font-face {
+    src: url(Belleza-Regular.ttf) format('truetype');
     font-family: 'Belleza';
 }
 :root {
