--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,6 @@ section {
     justify-content: center;
     height: 100vh;
     width: 100%; 
-
     padding: 0 15vw 0 15vw;
 }
 
@@ -149,7 +148,6 @@ section h2 {
     font-size: 2rem;
     padding: 1.25rem 0;
     color: var(--clr-primary-300);
-   
 }
 
 /* =========================================================*/
@@ -171,6 +169,7 @@ p.subheading {
 #home h1 {
     font-family: 'Southam Demo';
     font-size: 10rem;
+    font-weight: lighter;
     color: var(--clr-primary-400);
 }
 
@@ -200,6 +199,9 @@ p.subheading {
     max-width: 800px;
 }
 #about h1 {
+    font-family: 'Southam Demo';
+    font-size: 5rem;
+    font-weight: lighter;
     color: var(--clr-primary-400);
 }
 
@@ -279,8 +281,11 @@ button:hover {
 }
 
 #projects h1 {
+    font-family: 'Southam Demo';
+    font-size: 5rem;
+    font-weight: lighter;
     padding-bottom: 2rem;
-    text-align: left;
+    
 }
 
 .projectContainer {
@@ -377,8 +382,10 @@ button:hover {
     height: 80%;
 }
 #contact h1 {
+    font-family: 'Southam Demo';
+    font-size: 5rem;
+    font-weight: lighter;
     color: var(--clr-primary-400);
-    font-size: 2.5rem;
 }
 
 #contact a {
@@ -538,7 +545,7 @@ footer .icons .icon a:hover {
     }
     #about {
         height: auto;
-        padding: 6vh 10vw 0 10vw;
+        padding: 8vh 10vw 0 10vw;
     }
     #about .aboutMeContent {
         flex-direction: column;
@@ -580,10 +587,9 @@ footer .icons .icon a:hover {
     
     #contact {
         height: auto;
-        padding: 5rem;
+        padding: 4rem;
     }
     #contact h1 {
-        font-size: 2rem;
         margin-bottom: 1rem;
     }
    
@@ -620,9 +626,7 @@ footer .icons .icon a:hover {
         height: auto;
         padding: 4rem 8vw 0 8vw;
     }
-    #about h1 {
-        font-size: 2rem;
-    }
+  
     #about .aboutMeContent .left p,
     #about .aboutMeContent .right p{
         font-size: 1rem;
@@ -642,10 +646,7 @@ footer .icons .icon a:hover {
         height: auto;
         padding: 3rem 0;
     }
-    #projects h1 {
-        font-size: 2rem;
-        padding-bottom: 1.5rem;
-    }
+  
     #projects .projectContainer {
         flex-direction: column;
         align-items: center;
@@ -678,7 +679,7 @@ footer .icons .icon a:hover {
         padding: 8vh 6vw;
     }
     #contact h1 {
-        font-size: 1.75rem;
+        font-size: 4rem;
     }
     #contact .wide{
         flex-direction: column;
