--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,7 @@
 /* =========================================================*/
 /*                    COLORS AND FONTS                      */
 /* =========================================================*/
-
-@font-face {
+@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');@font-face {
     font-family: 'Southam Demo';
     src: url(../fonts/SouthamDemo.otf) format('opentype');
     /* Adding all src */
@@ -28,9 +27,8 @@
     --clr-primary-200: #ebebeb;
     --clr-primary-300: #bdbdbd;
     --clr-primary-400: #5e5e5e;
-    --clr-primary-900: #2b2b2b;
+    --clr-primary-900: #242424;
 
-    /* --ff-primary: 'Noto Sans'; */
     --ff-primary: 'Cutive Mono', monospace;
     --ff-headings: 'Belleza';
 }
@@ -46,24 +44,20 @@
 *::after {
     box-sizing: border-box;
 }
-.wrapper {
-    /* height: 100vh; */
-    /* overflow-y: auto; */
-    /* overflow-x: hidden; */
-    perspective: 10px;
-}
+
 html {
     font-family: var(--ff-primary);
     font-size: 1rem;
+    font-weight: lighter;
     color: var(--clr-primary-400);
     scroll-behavior: smooth;
-    cursor: url('../cursor-filled.png'), pointer;
+    /* cursor: url('../cursor-filled.png'), pointer; */
 }
 body {
     position: relative;
 }
 a, button {
-    cursor: url('../pointer-filled.png'), auto;
+    cursor: url('../images/pointer-filled.png'), auto;
 }
 .wide {
     display: flex;
@@ -126,22 +120,16 @@ nav .container ul li a:hover {
 }
 nav .container ul li.active {
     /* Hover button */
-    background-color: var(--clr-primary-400);
-    
+    background-color: var(--clr-primary-400); 
     border-radius: 5px;
-    /* Whenever the background-color changes, it will have this transition */
-    /* transition: 0.3 ease background-color; */
 }
 nav .container ul li.active a {
     /* Hover button text color */
     color: white;
 }
-
-
 /* =========================================================*/
 /*                          SECTIONS                        */
 /* =========================================================*/
-
 section {
     display: flex;
     align-items: center;
@@ -150,7 +138,6 @@ section {
     width: 100%; 
     padding: 0 15vw 0 15vw;
 }
-
 section h1 {
     font-family: var(--ff-headings);
     font-size: 3rem;
@@ -161,7 +148,6 @@ section h2 {
     padding: 1.25rem 0;
     /* color: var(--clr-primary-300); */
 }
-
 /* =========================================================*/
 /*                           HOME                           */
 /* =========================================================*/
@@ -172,19 +158,16 @@ section h2 {
 p {
     font-size: 2rem;
 }
-
 p.subheading {
     margin-top: 1.5rem;
     font-size: 1.5rem;
 }
-
 #home h1 {
     font-family: 'Southam Demo';
     font-size: 10rem;
     font-weight: lighter;
     color: var(--clr-primary-400);
 }
-
 #home .hero {
     display: flex;
     width: 75%;
@@ -193,7 +176,6 @@ p.subheading {
     align-items: flex-start;
     justify-content:end;
 }
-
 /* =========================================================*/
 /*                          ABOUT                           */
 /* =========================================================*/
@@ -215,47 +197,28 @@ p.subheading {
 }
 #about .aboutMeContent{
     display: flex; 
+    flex-direction: column;
     width: 100%;
     margin-top: 30px;
     line-height: 24px;
     color: var(--clr-primary-900);
-}
-#about .left h3 {
-    font-size: 1.5rem;
-    font-weight: lighter;
-    line-height: 2rem;
-}
-#about .left p,
-#about .right {
-    line-height: 2rem;
-}
-#about .wide .aboutMeContent .right h2 {
-    font-family: 'Southam Demo';
-    font-size: 3rem;
-    font-weight: lighter;
-    padding: 2rem 0;
-}
-#about .wide .aboutMeContent .right h3 {
-    font-family: var(--ff-headings);
-    font-size: 1.5rem;
 }
 
 #about .aboutMeContent p {
     color: var(--clr-primary-900);
     font-size: 1.125rem;
 }
-#about .aboutMeContent .left,
-#about .aboutMeContent .right {
-    width: 50%;
+#about .aboutMeContent h2 {
+    font-family: 'Southam Demo';
+    font-size: 3rem;
+    font-weight: lighter;
 }
-.aboutMeContent .left {
-    padding-right: 5rem;
+#about .aboutMeContent h3.tagline {
+    font-size: 1.5rem;
 }
-
-.aboutMeContent .left h2 {
-    font-size: 2rem;
+#about .aboutMeContent h3 {
+    font-family: var(--ff-headings);
 }
-
 #about .atl {
     width: 100%;
     margin-bottom: -10px;
@@ -266,15 +229,12 @@ p.subheading {
     height: auto;
     object-fit: cover;
 }
-
 button {
     border: none; 
     margin: 20px 0 20px 0;
     padding: 10px;
     color: white;
     font: var(--ff-body);
-    /* transition: [transition-property] [transition-duration] [transition-timing-function] [transition-delay]; */
-
     transition: background-color 0.5s ease, filter 0.2s ease-in-out, transform 0.2s;
     background-color: var(--clr-primary-400);
     border-radius: 5px;
@@ -399,6 +359,7 @@ button:hover {
 }
 #contact .wide {
     flex-direction: row;
+    justify-content: center;
     width: 100%;
     height: 80%;
 }
@@ -513,7 +474,7 @@ footer .icons {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 200px;
+    width: 175px;
 }
 
 footer .icons .icon a img {
@@ -638,16 +599,11 @@ footer .icons .icon a:hover {
         height: auto;
         padding: 4rem 6vw 0 6vw;
     }
-    #about .aboutMeContent .left p,
-    #about .aboutMeContent .right p{
-        font-size: 1rem;
+    #about .aboutMeContent p {
+        font-size: 1.125rem;
     }
-    #about .left h3 {
-        font-size: 1.25rem;
-    }
-    
-    #about .wide .aboutMeContent .right h3 {
-        font-size: 1.3rem;
+    #about .aboutMeContent h3 {
+        line-height: 2rem;
     }
     #about form {
         margin: 20px 0 20px 0;
@@ -683,11 +639,11 @@ footer .icons .icon a:hover {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 3rem;
+        padding: 2rem;
     }
     #contact h1 {
         font-size: 4rem;
-        margin-bottom: 2rem;
+        margin-bottom: 0;
     }
     #contact .wide{
         flex-direction: column;
