--- a/css/styles.css
+++ b/css/styles.css
@@ -266,7 +266,7 @@ button:hover {
 
 .projectContainer {
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     justify-content: center;
     align-items: center;
     max-width: 1200px;
@@ -276,17 +276,16 @@ button:hover {
 
 .projectCard { 
     display: flex; 
+    width: 50%;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: auto;
+    justify-content: space-between;
+    align-items: flex-start;
+    height: 700px;
     color: var(--clr-primary-400);
     background-color: var(--clr-primary-200);
     padding: 45px;
     margin: 1rem 3rem;
-    border-radius: 5px;
 }
-
 .projectCard p {
     font-size: 1rem;
 }
@@ -295,7 +294,7 @@ button:hover {
     /* Make button as wide as text inside it */
     width: fit-content;
     padding: 10px; 
-    margin-top: 25px;
+    margin: 2rem 0;
     background-color: var(--clr-primary-400);
     text-decoration: none;
     color: white;
@@ -303,48 +302,22 @@ button:hover {
     transition: background-color .2s ease-in-out,
                 transform .2s ease-in-out;
 }
-
 .projectCard a:hover{
     background-color: white;
     transform: translateY(-5px);
     filter: drop-shadow(1px 2px 4px #c3c3c3);
     color: var(--clr-primary-900);
 }
-
-/* Individual Project Styling */
-.project2 {
-    flex-direction: row;
-}
-.project2 h2 {
-    margin-bottom: 1rem;
-}
-
-.project2container {
-    display: flex; 
-    flex-direction: column;
-    justify-content: space-between;
-    width: 50%;
-    padding: 20px;
-}
-
-.project2 img {
+.projectContainer img {
     width: 100%;
     filter: contrast(60%) grayscale(100%);
     border-radius: 5px;
     transition: filter 0.5s;
 }
-
-.project2 img:hover {
+.projectContainer img:hover {
     filter: contrast(60%) grayscale(0%);
 }
 
-.illustration { 
-    width: 30%;
-    margin: 2rem;
-}
-.illustration img {
-    width: 100%;
-}
 /* =========================================================*/
 /*                          CONTACT                         */
 /* =========================================================*/
