--- a/css/styles.css
+++ b/css/styles.css
@@ -211,13 +211,16 @@ p.subheading {
 #about .aboutMeContent h2 {
     font-family: 'Southam Demo';
     font-size: 3rem;
+    color: var(--clr-primary-400);
     font-weight: lighter;
+    margin-bottom: 1rem;
 }
 #about .aboutMeContent h3.tagline {
     font-size: 1.5rem;
 }
 #about .aboutMeContent h3 {
     font-family: var(--ff-headings);
+    
 }
 #about .atl {
     width: 100%;
@@ -284,7 +287,7 @@ button:hover {
     color: var(--clr-primary-400);
     background-color: var(--clr-primary-200);
     padding: 45px;
-    margin: 1rem 3rem;
+    margin: 2rem;
 }
 .projectCard p {
     font-size: 1rem;
@@ -317,6 +320,13 @@ button:hover {
 .projectContainer img:hover {
     filter: contrast(60%) grayscale(0%);
 }
+.projectContainer img.portfolio-mockup {
+    filter: contrast(70%);  
+}
+.projectContainer img.portfolio-mockup:hover {
+    filter: contrast(100%);
+}
+
 
 /* =========================================================*/
 /*                          CONTACT                         */
