--- a/css/styles.css
+++ b/css/styles.css
@@ -148,6 +148,16 @@ section h2 {
     padding: 1.25rem 0;
     /* color: var(--clr-primary-300); */
 }
+.reveal {
+    position: relative; 
+    transform: translateY(150px);
+    opacity: 0;
+    transition: all 2s ease;
+}
+.reveal.active {
+    transform: translateY(0px);
+    opacity: 1;
+}
 /* =========================================================*/
 /*                           HOME                           */
 /* =========================================================*/
