--- a/css/styles.css
+++ b/css/styles.css
@@ -287,12 +287,11 @@ button:hover {
     width: 100%;
     height: auto;
 }
-
 .projectCard { 
     display: flex; 
     width: 50%;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: flex-start;
     height: 700px;
     color: var(--clr-primary-400);
@@ -303,12 +302,11 @@ button:hover {
 .projectCard p {
     font-size: 1rem;
 }
-
 .projectCard a {
     /* Make button as wide as text inside it */
     width: fit-content;
     padding: 10px; 
-    margin: 2rem 0;
+    margin: 0;
     background-color: var(--clr-primary-400);
     text-decoration: none;
     color: white;
@@ -540,17 +538,19 @@ footer .icons .icon a {
         align-items: center;
         justify-content: center;
     }
-    .projectCard {
+    #projects .projectContainer .projectCard {
         width: 90%;
         height: auto;
     }
-    .project2 {
-        flex-direction: column;
+    #projects .projectContainer .projectCard img {
+        width: 40%;
+        margin-bottom: 1rem;
     }
-    .project2container {
-        align-items: center;
-        width: 100%;
+    #projects .projectContainer .projectCard p,
+    #projects .projectContainer .projectCard a {
+        margin-bottom: 1rem;
     }
+
     #contact {
         height: auto;
         padding: 4rem;
@@ -612,17 +612,9 @@ footer .icons .icon a {
         align-items: center;
         justify-content: center;  
     }
-    .projectCard {
-        width: 90%;
-        height: auto;
-        padding: 1rem;
-        line-height: 1.5rem;
-    }
-    .projectCard h2 {
-        text-align: center;
-    }
-    .project1 {
-        padding: 30px;
+    #projects .projectContainer .projectCard img {
+        width: 100%;
+        margin: 1.25rem 0;
     }
     .projectCard a {
         width: fit-content;
