--- a/css/styles.css
+++ b/css/styles.css
@@ -230,6 +230,7 @@ p.subheading {
 }
 #about .aboutMeContent h3 {
     font-family: var(--ff-headings);
+    margin: .25rem 0;
 }
 #about button:active {
     transform: translateY(4px);
@@ -250,6 +251,7 @@ button {
     padding: 10px;
     color: white;
     font: var(--ff-body);
+    width: fit-content;
     transition: background-color 0.5s ease, filter 0.2s ease-in-out, transform 0.2s;
     background-color: var(--clr-primary-400);
     border-radius: 5px;
